--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "sass": "^1.62.1"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "anymatch": "^3.1.3",
     "binary-extensions": "^2.2.0",
